openmediavault (5.0.3-1) unstable; urgency=low

  * Code cleanup.
  * Set correct HTTP status codes.

 -- Volker Theile <volker.theile@openmediavault.org>  Sun, 19 May 2019 16:21:00 +0200

openmediavault (5.0.2-1) unstable; urgency=low

  * Fix rsyncd issue.
  * Enable TLS 1.3 in WebGUI.
  * Prefer X25519 over NIST P-384 and NIST P-256 in nginx's configuration
    for the WebGUI.
  * Fix proftpd error raised by erroneous PID file permissions.
  * Issue #371: Fix issues with PHP version.
  * Issue #374: Fix iptables issue. Use systemd service instead of ifupdown.

 -- Volker Theile <volker.theile@openmediavault.org>  Fri, 10 May 2019 07:50:36 +0200

openmediavault (5.0.1-1) unstable; urgency=low

  * Display 'Updates available' status in dashboard widget.
  * Fix bug when writing file /etc/mdadm/mdadm.conf.
  * Issue #340: Fix bug in Avahi NFS SLS file.
  * Issue #347: Cannot create logical volume.
  * Issue #352: Fix bug in SSL certificate deployment.

 -- Volker Theile <volker.theile@openmediavault.org>  Sat, 20 Apr 2019 10:34:15 +0200

openmediavault (5.0-1) unstable; urgency=low

  * Use Salt to deploy configuration settings. Using 'omv-salt stage run all'
    will deploy the whole system according to the configuration database.
  * The omv-salt CLI command superseds omv-mkconf. Note, the command
    will not only create the configuration files, it will also take care
    about to start/stop/restart the services.
  * The omv-initsystem command has been replaced by 'omv-confdbadm populate'.
    This command discovers the current system settings and synchronizes them
    into the database.
  * Default systems settings will now be applied by the Salt orchestration
    state 'omv.stage.setup'.
  * Add Time Machine support to SMB/CIFS shares.
  * Use systemd-logind to handle power button action.
  * Use systemd to reboot/shutdown/standby the system.
  * Issue #93: Use chrony instead of ntpd.
  * Issue #146: Use systemd to configure the network.