@@ -2,6 +2,8 @@ openmediavault (5.0.3-1) unstable; urgency=low
 
   * Code cleanup.
   * Set correct HTTP status codes.
+  * Issue #322: Process Device Mapper devices correctly in method
+    openmediavault.fs.Filesystem::get_parent_device_file().
 
  -- Volker Theile <volker.theile@openmediavault.org>  Sun, 19 May 2019 16:21:00 +0200
 
